# METU-CENG477

./: README.md  TCAN_Lectures.txt
hw1/: CMakeLists.txt
hw1/RayTracer/: cornellbox_front.ppm  cornellbox_inverse.ppm  cornellbox_top.ppm  parser.cpp  parser.h  raytracer  raytracer.cpp  simple.ppm  simple.xml
hw1/RayTracer backup/: raytracer  raytracer.cpp
hw1/ipegin son/: a.out  parser.h  raytracer  raytracer.cpp  test.ppm
hw1/ipegin son/Sample Scenes/: deneme.cpp  deneme.h
hw2/Assignment2/: CMakeLists.txt  raytracer
hw2/files/: CMakeLists.txt  MappingData.cpp  MappingData.h  cikan.ppm  hit_record.h  integrator.cpp  integrator.h  material.cpp  material.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  parser.cpp  raytracer  scene.cpp  sphere.cpp  sphere.h  transformInfo.cpp  transformInfo.h  triangle.cpp  triangle.h
hw3/Assignment3/: CMakeLists.txt
hw3/Assignment3/Source/: main.cpp  parser.cpp  parser.h  vector.h
hw4/: main.cpp  shader.frag  shader.vert
